--- a/totalhr.web/Views/Calendar/CreateCalendar.cshtml
+++ b/totalhr.web/Views/Calendar/CreateCalendar.cshtml
@@ -51,7 +51,8 @@
                         </div>
                     </div> 
             
-                    <div class="control-group">
+                    <!-- calendar template needs implementing before we can show this -->
+                    <div class="control-group" style="display:none">
                         <label class="control-label">@Calendar.V_Template_Id</label>
                         <div class="controls">
                                 @Html.HiddenFor(x => x.TemplateId)
