--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -9,33 +9,33 @@
     </li>
      <li>
         <a class="" href="/Payroll/">
-            <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_Payroll
+            <span class=" icon-box"><i class="icon-money"></i></span> @Account.V_Payroll
         </a>
     </li> 
      <li>
         <a class="" href="/Task/">
-            <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_Tasks
+            <span class="icon-box"><i class="icon-tasks"></i></span> @Account.V_Tasks
         </a>
     </li>   
    
     <li>
         <a class="" href="/Account/MyDetails">
-            <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_My_Profile
+            <span class="icon-box"><i class="icon-user"></i></span> @Account.V_My_Profile
         </a>
     </li>  
      <li>
         <a class="" href="/Account/Contract/">
-            <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_My_Contract
+            <span class="icon-box"><i class="icon-briefcase"></i></span> @Account.V_My_Contract
         </a>
     </li>  
     <li>
         <a class="" href="/Account/Permissions/">
-            <span class="icon-box"><i class="icon-dashboard"></i></span> @Account.V_My_Profiles
+            <span class="icon-box"><i class="icon-lock"></i></span> @Account.V_My_Profiles
         </a>
     </li>   
      <li class="has-sub">
         <a href="javascript:;" class="">
-            <span class="icon-box"><i class="icon-fire"></i></span> @Account.V_My_Absences
+            <span class="icon-box"><i class="icon-signout"></i></span> @Account.V_My_Absences
             <span class="arrow"></span>
         </a>
         <ul class="sub">
@@ -46,7 +46,7 @@
     
     <li class="has-sub">
         <a href="javascript:;" class="">
-            <span class="icon-box"><i class="icon-th"></i></span> @Document.V_Documents
+            <span class="icon-box"><i class="icon-book"></i></span> @Document.V_Documents
             <span class="arrow"></span>
         </a>
         <ul class="sub">
@@ -58,7 +58,7 @@
          
      <li class="has-sub">
         <a href="javascript:;" class="">
-            <span class="icon-box"><i class=" icon-qrcode"></i></span> @AdminGeneric.V_Calendar
+            <span class="icon-box"><i class="icon-calendar"></i></span> @AdminGeneric.V_Calendar
             <span class="arrow"></span>
         </a>
         <ul class="sub">
@@ -69,7 +69,7 @@
 
      <li class="has-sub">
         <a href="javascript:;" class="">
-            <span class="icon-box"><i class=" icon-qrcode"></i></span> @AdminGeneric.V_Communications
+            <span class="icon-box"><i class="icon-bullhorn"></i></span> @AdminGeneric.V_Communications
             <span class="arrow"></span>
         </a>
         <ul class="sub">
@@ -82,7 +82,7 @@
    
      <li class="has-sub">
         <a href="javascript:;" class="">
-            <span class="icon-box"><i class="icon-map-marker"></i></span> @Account.V_Company
+            <span class="icon-box"><i class="icon-group"></i></span> @Account.V_Company
             <span class="arrow"></span>
         </a>
         <ul class="sub">
@@ -96,12 +96,13 @@
 
     <li class="has-sub">
         <a href="javascript:;" class="">
-            <span class="icon-box"><i class="icon-map-marker"></i></span> @AdminGeneric.V_Time_Recording
+            <span class="icon-box"><i class="icon-time"></i></span> @AdminGeneric.V_Time_Recording
             <span class="arrow"></span>
         </a>
         <ul class="sub">
-            <li><a class="" href="/TimeRecording/"> @Account.V_Record_Time</a></li>
-            <li><a class="" href="/TimeRecording/"> @Account.V_Search_For_Recording</a></li>
+            <li><a href="/TimeRecording/"> @TimeRecording.V_Time_Recording_Options</a></li>
+            <li><a class="" href="/TimeRecording/RecordTime/"> @Account.V_Record_Time</a></li>
+            <li><a class="" href="/TimeRecording/Search/"> @Account.V_Search_For_Recording</a></li>
         </ul>
     </li> 
     
