--- a/totalhr.web/Views/Account/Index.cshtml
+++ b/totalhr.web/Views/Account/Index.cshtml
@@ -24,61 +24,58 @@
     @Html.Raw(GenericHelper.MakeBreadCrumb(breadCrumbItems))
 }
 
-
-
-@{Html.RenderPartial("_FormScripts");}
    
 <div class="row-fluid">
-    <div class="alert">
-            @Html.Raw(string.Format(Account.MSG_Welcome, Model.FullName))
+    <div class="alert alert-info">
+            @Html.Raw(string.Format(Account.MSG_Welcome, "<strong>" + Model.FullName + "</strong>"))
         </div>
 </div>
 <div class="square-state">
     <div class="row-fluid">
         <a class="icon-btn span2" href="/Account/MyDetails/">
-            <i class="icon-group"></i>
+            <i class="icon-user"></i>
             <div>@Account.V_My_Profile</div>
         </a>
 
          @if (bDisplayCalendar)
         {
              <a class="icon-btn span2" href="/Calendar/">
-                <i class="icon-group"></i>
+                <i class="icon-calendar"></i>
                 <div>@Account.V_Calendars</div>
             </a>
          }
 
         <a class="icon-btn span2" href="/Document/">
-            <i class="icon-group"></i>
+            <i class="icon-book"></i>
             <div>@Account.V_Documents</div>
         </a>
         
          <a class="icon-btn span2" href="/Payroll/">
-            <i class="icon-group"></i>
+            <i class="icon-money"></i>
             <div>@Account.V_Payroll</div>
         </a>
         
         <a class="icon-btn span2" href="/Task/">
-            <i class="icon-group"></i>
+            <i class="icon-tasks"></i>
             <div>@Account.V_Tasks</div>
         </a>
         
         <a class="icon-btn span2" href="/Contract/">
-            <i class="icon-group"></i>
+            <i class="icon-briefcase"></i>
             <div>@Account.V_My_Contract</div>
         </a>
         
         <a class="icon-btn span2" href="/Account/Profiles/">
-            <i class="icon-group"></i>
+            <i class="icon-lock"></i>
             <div>@Account.V_My_Profiles</div>
         </a>
         
         <a class="icon-btn span2" href="/Absence/">
-            <i class="icon-group"></i>
+            <i class="icon-signout"></i>
             <div>@Account.V_My_Absences</div>
         </a>
         <a class="icon-btn span2" href="/Communication/">
-            <i class="icon-group"></i>
+            <i class="icon-bullhorn"></i>
             <div> @AdminGeneric.V_Communications</div>
         </a>
 
@@ -87,19 +84,19 @@
             <div> @Account.V_Employee_Directory</div>
         </a>
         <a class="icon-btn span2" href="/Company/Departments/">
-            <i class="icon-group"></i>
+            <i class="icon-qrcode"></i>
             <div>@Account.V_Departments</div>
         </a>
         <a class="icon-btn span2" href="/Company/Structure/">
-            <i class="icon-group"></i>
+            <i class="icon-sitemap"></i>
             <div>@Account.V_Structure</div>
         </a>
-        <a class="icon-btn span2" href="/Company/Gallery/">
-            <i class="icon-group"></i>
+        <a class="icon-btn span2" href="/Gallery/">
+            <i class="icon-picture"></i>
             <div>@Account.V_Image_Gallery</div>
         </a>
-         <a class="icon-btn span2" href=/TimeRecording/">
-            <i class="icon-group"></i>
+         <a class="icon-btn span2" href="/TimeRecording/">
+            <i class="icon-time"></i>
             <div>@AdminGeneric.V_Time_Recording</div>
         </a>
     </div>
