--- a/totalhr.web/Views/TimeRecording/Search.cshtml
+++ b/totalhr.web/Views/TimeRecording/Search.cshtml
@@ -1,75 +1,124 @@
 ﻿@model totalhr.web.ViewModels.SearchVM
 
+@using totalhr.Resources
+@using TH = totalhr.web.Helpers;
+@using AH = totalhr.web.Areas.Admin.Helpers;
+@using AM = totalhr.web.Areas.Admin.Models;
+
 @{
-    ViewBag.Title = "Search";
-}
-
-<h2>Search</h2>
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
-    <fieldset>
-        <legend>
-            Search Time Recordings
-        </legend>
-        <table>
-            <tr>
-                <td>
-                    Start Date: @Html.EditorFor(x => x.StartDate)
-                </td>
-                <td>
-                    End Date: @Html.EditorFor(x => x.EndDate)
-                </td>
-                <td>
-                    Number of Results: @Html.EditorFor(x => x.ResultsPerPage)
-                </td>
-                <td>
-                    <input type="submit" value="Submit" />
-                </td>
-            </tr>
-        </table>
-    </fieldset>
-}
+    ViewBag.Title = TimeRecording.V_Time_Recording_Search;
     
-    @if (Model.Results != null)
+    var breadCrumbItems = new List<AM.BreadCrumbItem>
     {
-        <table>
-            <tr>
-                <td>
-                    Start Time
-                </td>
-                <td>
-                    End Time
-                </td>
-                <td>
-                    Recorded by
-                </td>
-                <td>
-                    Duration Recorded
-                </td>
-                <td></td>
-            </tr>
-            @foreach (var result in Model.Results)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(x => result.StartTime)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(x => result.EndTime)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(x => result.AddedByUser)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(x => result.RecordedDuration)
-                    </td>
-                    <td>@Html.ActionLink("Details", "Details", new { id = result.Id }) </td>
-                </tr>
-            }
-        </table>
-
-    <br />
-    @Html.ActionLink("Back to Time Recording Home", "Index")
+        new AM.BreadCrumbItem{Url = "/TimeRecording/", Text = TimeRecording.V_Time_Recording, Title= TimeRecording.V_Time_Recording},       
+        new AM.BreadCrumbItem{Url = "", Text = TimeRecording.V_Time_Recording_Search, Title = TimeRecording.V_Time_Recording_Search}
+    };
 }
+
+@section pagetitle{
+    @TimeRecording.V_Time_Recording_Search
+}
+
+@section breadcrumb{
+    @Html.Raw(AH.GenericHelper.MakeBreadCrumb(breadCrumbItems))
+}
+
+
+<div class="row-fluid">        
+    <div class="widget">
+        <div class="widget-title">
+            <h4><i class="icon-reorder"></i> @TimeRecording.V_Search_Criteria</h4>
+            <span class="tools">
+                <a href="javascript:;" class="icon-chevron-down"></a>                   
+            </span>
+        </div>
+        <div class="widget-body form-horizontal"> 
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
+              
+                <table>
+                    <tr>
+                        <td>
+                            @TimeRecording.V_Start_Date: @Html.EditorFor(x => x.StartDate)
+                        </td>
+                        <td>
+                            @TimeRecording.V_End_Date: @Html.EditorFor(x => x.EndDate)
+                        </td>
+                        <td>
+                            @TimeRecording.V_No_Results: @Html.EditorFor(x => x.ResultsPerPage)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">
+                             <button type="submit" class="btn btn-info">
+                                <i class="icon-search icon-white"></i> @TimeRecording.V_Search
+                            </button>
+                        </td>
+                    </tr>
+                </table>
+               
+            }
+        </div>
+    </div>
+</div>
+
+<div class="row-fluid">        
+    <div class="widget">
+        <div class="widget-title">
+            <h4><i class="icon-reorder"></i> @TimeRecording.V_Search_Result</h4>
+            <span class="tools">
+                <a href="javascript:;" class="icon-chevron-down"></a>                   
+            </span>
+        </div>
+        <div class="widget-body form-horizontal"> 
+              
+            @if (Model.Results != null && Model.Results.Count > 0)
+            {
+                <table class="table table-striped table-bordered table-advance table-hover" id="sample_1">
+                    <thead>
+                        <tr>
+                            <th>@TimeRecording.V_Start_Time</th>
+                            <th>@TimeRecording.V_End_Time</th>
+                            <th>@TimeRecording.V_Recorded_By</th>
+                            <th>@TimeRecording.V_Duration_Recorded</th>
+                            <th>&nbsp;</th>
+                    </tr>
+                    @foreach (var result in Model.Results)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(x => result.StartTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(x => result.EndTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(x => result.AddedByUser)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(x => result.RecordedDuration)
+                            </td>
+                            <td>@Html.ActionLink("Details", "Details", new { id = result.Id }) </td>
+                        </tr>
+                    }
+                </table>
+
+            <br />   
+            }
+            else if (Model.IsDirty)
+            {
+                <div class="alert alert-danger">
+                    @TimeRecording.Error_No_Time_Recording
+                </div>
+            }
+
+            @Html.ActionLink(TimeRecording.V_Back_To_Options, "Index")
+        </div>
+    </div>
+</div>
+            
