--- a/totalhr.web/Views/Shared/_DefaultLayout.cshtml
+++ b/totalhr.web/Views/Shared/_DefaultLayout.cshtml
@@ -46,8 +46,8 @@
                     <ul class="top-menu">
                         <li><a href="#">Tour</a></li>
                         <li><a href="#">Contact</a></li>
-						<li><a href="#">Sign Up</a></li>
-						<li><a href="#">Sign In</a></li>
+						<li><a href="/Account/Register/">Sign Up</a></li>
+						<li><a href="/Account/Login/">Sign In</a></li>
                     </ul>
                 </div>
                 <!-- This column is hidden on mobiles -->
